<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskLayoutDialog"
    android:layout_width="350dp"
    android:layout_height="550dp"
    android:layout_gravity="center"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="345dp"
        android:layout_height="550dp"
        android:background="@drawable/layout_design"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foregroundGravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444">


        <EditText
            android:id="@+id/edt_Title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_text_design"
            android:editable="false"
            android:ems="10"
            android:hint="@string/title"
            android:padding="5dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_Task_Description"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_text_design"
            android:editable="false"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/task_description"
            android:padding="5dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_Title"
            tools:ignore="TouchTargetSizeCheck" />


        <LinearLayout
            android:id="@+id/setDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_Task_Description"
            tools:ignore="ExtraText">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:src="@drawable/ic_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Due Date:"
                android:textSize="18sp"
                android:textStyle="bold" />
            "

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:hint="@string/set_due_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/setTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setDate">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:src="@drawable/ic_time"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Due Time:"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:hint="@string/set_time"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                tools:layout_editor_absoluteY="231dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/categoryLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:gravity="left"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setTime">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_weight="20"
                android:gravity="center"
                android:text="@string/category"
                android:textColor="@color/blackish"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Category"
                android:textSize="19sp"

                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/statusLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryLayout">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_weight="20"
                android:gravity="center"
                android:text="@string/status"
                android:textColor="@color/blackish"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/updateStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:gravity="center"
                android:text="New" />


        </LinearLayout>

        <Button
            android:id="@+id/btnStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="20dp"
            android:text="Start Task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>